fix the misspeeled avatar distorted selector in css file

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -4,7 +4,7 @@
     height: auto;
 }
 
-.avatar.disorted {
+.avatar.distorted {
 
      width: 200px;
      height: 400px;
